feat: add saleOrder with docker-compose production
