# app/request/order_req.go
@@ -5,10 +5,6 @@ type OrderRequest struct {
 }
 
 type OrderItem struct {
-	Id                int     `json:"id" binding:"required" example:"1"`
-	Name              string  `json:"name" binding:"required" example:"apple"`
-	Description       string  `json:"description" example:"apple"`
-	Price             float64 `json:"price" binding:"required" example:"200"`
-	Amount            int     `json:"amount" binding:"required" example:"10"`
-	ProductCategoryId int     `json:"product_category_id" binding:"required" example:"1"`
+	ProductId int `json:"product_id" binding:"required" example:"1"`
+	Amount    int `json:"amount" binding:"required" example:"10"`
 }
